k8s/food/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: food-ingress
  namespace: next-orders
  labels:
    app: food
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - demo.nextorders.ru
      secretName: demo.nextorders.ru
  rules:
    - host: demo.nextorders.ru
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: food-service
                port:
                  number: 3000
